<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDonutToOrderActivity">

    <TextView
        android:id="@+id/donutFlavorName"
        android:layout_width="134dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="45dp"
        android:gravity="center|center_horizontal|fill"
        android:text="@string/empty"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutImage" />

    <Spinner
        android:id="@+id/donutQuantity"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="214dp"
        android:layout_marginLeft="214dp"
        android:layout_marginTop="45dp"
        android:gravity="center|center_horizontal|fill"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutImage" />

    <ImageView
        android:id="@+id/donutImage"
        android:layout_width="234dp"
        android:layout_height="175dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donut2" />

    <Button
        android:id="@+id/addDonut"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutFlavorName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/donutPrice"
            android:layout_width="234dp"
            android:layout_height="55dp"
            android:hint="@string/subtotal" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>