<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/ru_cafe"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="45dp"
        android:gravity="center|center_horizontal|fill"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orderDonutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <ImageButton
        android:id="@+id/orderDonutButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        android:onClick="navigateDonutOrder"
        app:layout_constraintBottom_toTopOf="@+id/orderCoffeeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/donut" />

    <ImageButton
        android:id="@+id/orderCoffeeButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/todo"
        android:onClick="navigateCoffeeOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDonutButton"
        app:srcCompat="@drawable/coffee" />

    <ImageButton
        android:id="@+id/yourOrderButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/todo"
        android:onClick="navigateYourOrder"
        android:text="@string/your_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/order" />

    <ImageButton
        android:id="@+id/storeOrderButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/todo"
        android:onClick="navigateStoreOrder"
        android:text="@string/store_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderButton"
        app:srcCompat="@drawable/store" />

</androidx.constraintlayout.widget.ConstraintLayout >

